@@ -37,11 +37,18 @@
 #include "html.h"
 #include "functions.h"
 #include "version.h"
+#ifdef __APPLE__
+	#define CAS_DIR_SEPARATOR	"/"
+#elif defined(__WIN32__)
+	#define CAS_DIR_SEPARATOR	"\\"
+#else
+	#define CAS_DIR_SEPARATOR	"/"
+#endif
 
-
-int create_html(char *stats[20], char *lines[6], char template[120])
+int create_html(char *stats[20], char *lines[6], char template[120], char *path_for_html)
 {
 	/* Strings */
+	char *path = NULL;
 	char version[25], upload[25], download[25];
 	char *search[] = {"#VERSION#", "#CLIENT#", "#NICK#", "#UPLOADRATE#" ,
 		"#DOWNLOADRATE#" , "#QUEUE#" , "#NUMSHARE#" , "#SESSIONUP#" ,
@@ -104,7 +111,16 @@ int create_html(char *stats[20], char *lines[6], char template[120])
 
 	/* printf("FINAL: %s\n",mem); */
 
-	char *path = get_path("aMule-online-sign.html");
+	if (path_for_html == NULL) {
+		path = get_path("aMule-online-sign.html");
+	} else {
+		if (path_for_html[strlen(path_for_html)-1] != CAS_DIR_SEPARATOR[0]) {
+			strcat(path_for_html, CAS_DIR_SEPARATOR);
+		}
+		strcat(path_for_html, "aMule-online-sign.html");
+		path = path_for_html;
+	}
+
 	if (NULL == path)
 	{
 		perror("could not get the HTML path\n");
